# src/utils/docs/swagger.yaml
@@ -9,13 +9,13 @@ servers:
 
 components:
   securitySchemes:
-    bearerAuth:
-      type: http
-      scheme: bearer
-      bearerFormat: JWT
+    cookieAuth:
+      type: apiKey
+      in: cookie
+      name: accessToken
 
 security:
-  - bearerAuth: []
+  - cookieAuth: []
 
 tags:
   - name: Users
@@ -88,8 +88,6 @@ paths:
       tags:
         - Users
       summary: Retorna dados do usuário autenticado
-      security:
-        - bearerAuth: []
       responses:
         200:
           description: Dados do usuário retornados com sucesso
@@ -100,8 +98,6 @@ paths:
     get:
       summary: Lista todas as dívidas do usuário autenticado
       tags: [Debts]
-      security:
-        - bearerAuth: []
       responses:
         200:
           description: Lista de dívidas
@@ -111,8 +107,6 @@ paths:
     post:
       summary: Cria uma nova dívida
       tags: [Debts]
-      security:
-        - bearerAuth: []
       requestBody:
         required: true
         content:
@@ -137,8 +131,6 @@ paths:
     get:
       summary: Retorna uma dívida específica
       tags: [Debts]
-      security:
-        - bearerAuth: []
       parameters:
         - in: path
           name: id
@@ -154,8 +146,6 @@ paths:
     put:
       summary: Atualiza uma dívida
       tags: [Debts]
-      security:
-        - bearerAuth: []
       parameters:
         - in: path
           name: id
@@ -180,8 +170,6 @@ paths:
     delete:
       summary: Remove uma dívida
       tags: [Debts]
-      security:
-        - bearerAuth: []
       parameters:
         - in: path
           name: id
@@ -198,8 +186,6 @@ paths:
     post:
       summary: Cria uma nova parcela para uma dívida
       tags: [Installments]
-      security:
-        - bearerAuth: []
       requestBody:
         required: true
         content:
@@ -235,8 +221,6 @@ paths:
      get:
       summary: Lista as parcelas de uma dívida
       tags: [Installments]
-      security:
-        - bearerAuth: []
       parameters:
         - in: path
           name: debtId
@@ -252,8 +236,6 @@ paths:
      get:
       summary: Lista as parcelas de uma dívida
       tags: [Installments]
-      security:
-        - bearerAuth: []
       parameters:
         - in: path
           name: debtId
@@ -270,8 +252,6 @@ paths:
     get:
       summary: Lista todas as fontes de dívidas
       tags: [DebtSources]
-      security:
-        - bearerAuth: []
       responses:
         200:
           description: Lista de fontes de dívidas
@@ -281,8 +261,6 @@ paths:
     post:
       summary: Cria uma nova fonte de dívida
       tags: [DebtSources]
-      security:
-        - bearerAuth: []
       requestBody:
         required: true
         content:
@@ -317,8 +295,6 @@ paths:
     get:
       summary: Retorna uma fonte de dívida específica
       tags: [DebtSources]
-      security:
-        - bearerAuth: []
       parameters:
         - in: path
           name: id
@@ -334,8 +310,6 @@ paths:
     put:
       summary: Atualiza uma fonte de dívida
       tags: [DebtSources]
-      security:
-        - bearerAuth: []
       parameters:
         - in: path
           name: id
@@ -370,8 +344,6 @@ paths:
     delete:
       summary: Remove uma fonte de dívida
       tags: [DebtSources]
-      security:
-        - bearerAuth: []
       parameters:
         - in: path
           name: id
